--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,19 +3,18 @@ owner: upptime # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: Church Nextcloud
+    url: https://drive.gracesd.com
+  - name: Personal Nextcloud
+    url: https://drive.glynch.dev
+  - name: Jellyfin
+    url: https://movies.glynch.dev
+  - name: BabyBuddy
+    url: https://ren.glynch.dev
+  - name: Website
+    url: https://website.glynch.dev
+  - name: Immich
+    url: https://photos.glynch.dev
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
