--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,8 @@
 # Change these first
 owner: glytchClaw # Your GitHub organization or username, where this repository lives
 repo: serverupptime # The name of this repository
+assignees:
+- glytchClaw
 
 sites:
   - name: Church Nextcloud
