--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,8 +7,8 @@ assignees:
 NOTIFICATION_EMAIL_SMTP: true
 NOTIFICATION_EMAIL_SMTP_PORT: 587
 NOTIFICATION_EMAIL_SMTP_HOST: smtp-mail.outlook.com
-NOTIFICATION_EMAIL_SMTP_USERNAME: ${{ secrets.email_user }}
-NOTIFICATION_EMAIL_SMTP_PASSWORD: ${{ secrets.email_pass }}
+NOTIFICATION_EMAIL_SMTP_USERNAME: ${{ secrets.EMAIL_USER }}
+NOTIFICATION_EMAIL_SMTP_PASSWORD: ${{ secrets.EMAIL_PASS }}
 
 sites:
   - name: Church Nextcloud
