Add SMTP secure option to .upptimerc.yml

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,6 +6,7 @@ assignees:
 
 NOTIFICATION_EMAIL_SMTP: true
 NOTIFICATION_EMAIL_SMTP_PORT: 587
+NOTIFICATION_EMAIL_SMTP_SECURE: false
 NOTIFICATION_EMAIL_SMTP_HOST: smtp-mail.outlook.com
 NOTIFICATION_EMAIL_SMTP_USERNAME: ${{ secrets.EMAIL_USER }}
 NOTIFICATION_EMAIL_SMTP_PASSWORD: ${{ secrets.EMAIL_PASS }}
