Add LHR Jellyfin to uptime monitoring

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,6 +17,8 @@ sites:
     url: https://website.glynch.dev
   - name: Immich
     url: https://photos.glynch.dev
+  - name: LHR Jellyfin
+    url: https://mediaserver.biggie.dad
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
