--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,6 +19,8 @@ sites:
     url: https://photos.glynch.dev
   - name: LHR Jellyfin
     url: https://mediaserver.biggie.dad
+  - name: LHR Gotify
+    url: https://notify.biggie.dad
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
